--- a/Dto.ApplePay/Dto.ApplePay.csproj
+++ b/Dto.ApplePay/Dto.ApplePay.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>OP-ApplePay-DTO</AssemblyName>
     <RootNamespace>OpenPath.Dto.ApplePay</RootNamespace>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <PackageId>OpenPath.DTO.ApplePay</PackageId>
     <Authors>Jason Martin</Authors>
     <Company>OpenPath, Inc.</Company>
@@ -18,19 +21,15 @@
     <PackageProjectUrl>https://github.com/OpenPathInc/OpenPath.DTO.ApplePay</PackageProjectUrl>
     <RepositoryUrl>https://github.com/OpenPathInc/OpenPath.DTO.ApplePay</RepositoryUrl>
     <AssemblyVersion>3.1.4.0</AssemblyVersion>
-    <PackageIcon>openpath.png</PackageIcon>
+
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\openpath.png">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
     <None Include="..\LICENSE">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
